--- a/app/assets/stylesheets/reset/reset.css
+++ b/app/assets/stylesheets/reset/reset.css
@@ -15,7 +15,9 @@ span, article, footer, time, small {
   box-sizing:inherit;
   background:transparent;
   user-select: none;
+  overflow: hidden;
 }
+
 
 ol, ul {
   list-style:none;
